--- a/client/index.html
+++ b/client/index.html
@@ -43,8 +43,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <!-- <script src="dist/indexedDb.bundle.js"></script> -->
   <script src="dist/app.bundle.js"></script>
-  <script src="dist/indexedDb.bundle.js"></script>
+  
   <script type="text/javascript">
     (function() {
       if("serviceWorker" in navigator) {
